首次提交项目

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,6 +5,7 @@ copyright = "© 2025, lee.so"
 languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
+publishDir = "docs"
 # prevent build failures when using Hugo's Instagram shortcode due to deprecated Instagram API.
 # See https://github.com/gohugoio/hugo/issues/7228#issuecomment-714490456
 ignoreErrors = ["error-remote-getjson"]
