首次提交项目

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hugo-paper.vercel.app/"
+baseURL = "https://yatingliu2019.github.io/"
 title = "Liuyating's Blog"
 author = "Steve Francia"
 copyright = "© 2025, lee.so"
