首次提交项目

--- a/hugo.toml
+++ b/hugo.toml
@@ -13,6 +13,7 @@ ignoreErrors = ["error-remote-getjson"]
 
 # ------------------------------
 theme = "paper"
+publishDir = "docs"
 
 [params]
   color = 'linen'
