--- a/hugo.toml
+++ b/hugo.toml
@@ -25,7 +25,7 @@ buildExpired = false
 
 avatar = 'https://yatingliu2019.github.io/images/p1.jpg'
   name = 'Liuyating'
-  bio = '理解万岁'
+  bio = '理解万岁 無限進步'
 # ------------------------------
 
 # needed to  render raw HTML (e.g. <sub>, <sup>, <kbd>, <mark>)
