docs: update website

--- a/hugo.toml
+++ b/hugo.toml
@@ -24,7 +24,7 @@ buildExpired = false
   mastodon = 'https://blog.csdn.net/qq_51870267?spm=1011.2415.3001.5111'
 
 avatar = 'https://yatingliu2019.github.io/images/p1.jpg'
-  name = 'Liuyating'
+  name = 'Yating Liu'
   bio = '理解万岁 無限進步'
 # ------------------------------
 
